# BwAI-Sample

./: DEPLOY_GCP.md  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  context.md  main.py  pyproject.toml  requirements.txt  requirements.yml
config/: main.yml
data/saved_models/: LogisticRegression_model.joblib  XGBoost_model.joblib
src/app/pages/: 2_Raw_Dataset.py  3_Pair_Plot.py  4_Classification.py
src/model/: classifier.py
src/utils/: loader.py
