[build-system]
requires = ["hatchling>=1.8,<2"]
build-backend = "hatchling.build"

[project]
name = "fastapi-streamlit"
version = "0.0.1"
description = "FastAPI backend with Streamlit frontend"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Md Mijanur Rahman", email = "md.rahman.ce@gmail.com"}]
license = {text = "MIT"}


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]